
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Added
    - to_feather and from_feather method overwrites to DMT.DataFrame

## [2.1.0] - 2024.05.16

This is an overall update release for DMT-core. The package has been enhanced on all ends. 

### Deleted

- Removed the documentation from this repository and moved it to https://gitlab.com/dmt-development/dmt-doc

### Fixed

- Proper DutView.save_dir check at instance creation

## [2.0.0] - 2023.06.19

### Added

- Pushing release-candidates to Pypi with ensured transparent versioning using git tags.
- Added cycler and colormath package dependencies
- Proper optional pylatex dependency
- Plot: Added style as an optional argument for add_data_set_multiple_y()
- SpecifierStr: Added pass-through kwargs from SpecifierStr.to_label() to SpecifierStr.to_tex()
- sub_specifier.DELTA is converted to_tex as \Delta X also added more testing for this feature.
- MCard: Added op_vars back to MCard and pushed its semver to 2.2. op_vars will be used in DutNgspice
- DutNgspice: Added devices_op_vars to collect all op_vars in a netlist and add them if OpVars is given in the sweep.outputdef
- DutNgspice: Added native support for VA-modeled devices using OpenVAF
- DutView: save_db now allows saving only some sweep_keys in case of separate databases
- SweepDefTransSinus and SweepDefTransRamp: 2 different transient signal sweepdefs
- PySide6 as an option to replace PySide2 in the long run
- Technology.serialize(): Added an abstract method for Technology to make the subclasses savable using json.
- DutTypeFlag.serialize() and DutTypeInt.serialize(): Added methods to make the classes savable using json.

### Changed

- DutNgspice now uses the verilog-code if a modelcard has one. This breaks the current behaviour. Next release will be 2.0.0
- Adjusted test_dut_ngspice to the new DutNgspice