@@ -9,6 +9,9 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 ### Added
     - to_feather and from_feather method overwrites to DMT.DataFrame
 
+### Fixed
+    - hidden bug in naming.get_specifier_from_string when a specifier is repeated in a non-convertable string
+
 ## [2.1.0] - 2024.05.16
 
 This is an overall update release for DMT-core. The package has been enhanced on all ends. 
